feat(federation): add getProposedFederationCreationBlockNumber method in FederationSupport
feat(federation): add unit tests for getProposedFederationCreationBlockNumber in FederationSupport